I forgot to replace a header.

--- a/lib/libminlib/Makefile
+++ b/lib/libminlib/Makefile
@@ -16,7 +16,7 @@ SRCS+= dhcp_gettag.c dhcp_settag.c
 SRCS+= gcov.c gcov_flush.c
 
 # Various utils
-SRCS+= itoa.c u64util.c
+SRCS+= itoa.c
 
 # svrctl
 SRCS+= svrctl.c
